# duckdb-lindel-extension

./: CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake
.github/: dependabot.yml
.github/workflows/: ExtensionTemplate.yml  MainDistributionPipeline.yml  _extension_deploy.yml  _extension_distribution.yml  schedule-1.2.yml
docs/: NEXT_README.md  README.md
duckdb_crypto_rust/: Cargo.toml  cbindgen.toml
duckdb_crypto_rust/src/: lib.rs
duckdb_lindel_rust/: Cargo.toml  cbindgen.toml
duckdb_lindel_rust/src/: lib.rs
src/: crypto_extension.cpp  lindel_extension.cpp  quack_extension.cpp
src/include/: crypto_extension.hpp  lindel_extension.hpp  rust.h
test/: README.md
test/sql/: crypto.test  lindel.test  quack.test
