[package]
name = "duckdb_crypto_rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "duckdb_crypto_rust"
crate-type = ["staticlib"]

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
blake2 = "0.10.6"
digest = "0.10.7"
hmac = "0.12.1"
md-5 = "0.10.6"
md4 = "0.10.2"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
